# fastapi_small_app

./: .gitignore  README.md
backend/: database.py  dependencies.py  exceptions.py  interfaces.py  main.py  models.py  pyproject.toml  repositories.py  schemas.py  services.py  test.db  uow.py
backend/auth/: __init__.py  models.py  repository.py  routes.py  schemas.py  services.py
backend/db/: database.py
backend/models/: __init__.py
backend/student_course/models/: course.py  student.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
